fix itens out of screen

--- a/src/assets/scss/spotlight.scss
+++ b/src/assets/scss/spotlight.scss
@@ -32,6 +32,9 @@
         position: relative;
         animation-name: enterLeft;
         animation-duration: 4s;
+        @include breakpoint(tablets){
+            text-align: center;
+        }
     }
       
 
