--- a/src/assets/scss/talk.scss
+++ b/src/assets/scss/talk.scss
@@ -283,12 +283,22 @@
     position: relative;
     h2 {
         position: absolute;
-        top: 90px;
-        margin-left: 100px;
-        width: 445px;
-        font-size: 42px;
+        top: 15px;
+        margin-left: 10px;
+        width: 200px;
+        font-size: 20px;
         font-weight: 100;
         color: white;
+        @media (min-width: $tablets){
+            top: 50px;
+            width: 445px;
+            font-size: 30px;
+        }
+        @media (min-width: $fullHdDesktops){
+            font-size: 42px;
+            top: 90px;
+            margin-left: 100px;
+        }
         span {
         font-weight: 600;
         color: $golden-dark;
